--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
             </form>
         </div>
     </section>
+    <!-- Contact Information Section -->
+<section id="contact-info" class="container mx-auto py-16 bg-gray-900 bg-opacity-80 rounded-lg shadow-lg mt-16">
+    <h2 class="text-3xl font-bold text-center mb-8">Contact Information</h2>
+    <div class="max-w-lg mx-auto text-center">
+        <p class="text-lg">
+            <strong>Email:</strong> <a href="mailto:nadirshaikh7860@gmail.com" class="text-yellow-400">nadirshaikh7860@gmail.com</a>
+        </p>
+        <p class="text-lg mt-4">
+            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nadir-shaikh-/" target="_blank" class="text-yellow-400">Nadir Shaikh</a>
+        </p>
+    </div>
+</section>
 
     <!-- Footer Section -->
     <footer class="bg-gray-800 py-4 text-center">
