--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">CEHv12</h3>
             <p class="mt-2">EC-Council</p>
-            <p class="mt-2 text-sm">2024</p>
+            <p class="mt-2 text-sm">Soon</p>
             <a href="certificate-link-1" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
@@ -103,9 +103,9 @@
             <a href="certificate-link-4" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
-            <h3 class="text-xl font-bold">Enter certificate name</h3>
-            <p class="mt-2">Enter Issuing organization</p>
-            <p class="mt-2 text-sm">Date</p>
+            <h3 class="text-xl font-bold">Introduction to Cyber Security</h3>
+            <p class="mt-2">TryhHackMe</p>
+            <p class="mt-2 text-sm">2024</p>
             <a href="certificate-link-4" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
     </div>
 </section>
