--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#contact" class="ml-6 text-lg font-bold">Contact</a>
             </div>
             <div>
-                <a href="./Nadirs_Resume.pdf" download="Nadirs_Resume.pdf" class="bg-yellow-400 text-black px-4 py-2 rounded-md">Download Resume</a>
+                <a href="C:\Users\Nadir\Desktop\portfolio\Nadirs_Resume.pdf" download="Nadirs_Resume.pdf" class="bg-yellow-400 text-black px-4 py-2 rounded-md">Download Resume</a>
             </div>
         </div>
     </nav>
@@ -81,8 +81,8 @@
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">CEHv12</h3>
             <p class="mt-2">EC-Council</p>
-            <p class="mt-2 text-sm">Soon</p>
-            <a href="certificate-link-1" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
+            <p class="mt-2 text-sm">2024</p>
+            <a href="certificate-link-1" target="_blank" class="mt-4 block text-yellow-400">Soon</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">Introduction to Cybersecurity</h3>
