--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#contact" class="ml-6 text-lg font-bold">Contact</a>
             </div>
             <div>
-                <a href="C:\Users\Nadir\Desktop\portfolio\Nadirs_Resume.pdf" download="Nadirs_Resume.pdf" class="bg-yellow-400 text-black px-4 py-2 rounded-md">Download Resume</a>
+                <a href="Nadirs_Resume.pdf" download="Nadirs_Resume.pdf" class="bg-yellow-400 text-black px-4 py-2 rounded-md">Download Resume</a>
             </div>
         </div>
     </nav>
