--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <section id="resume" class="container mx-auto py-16 bg-gray-900 bg-opacity-80 rounded-lg shadow-lg mt-16">
     <h2 class="text-3xl font-bold text-center mb-8">Download My Resume</h2>
     <div class="text-center">
-        <a href="C:\Users\Nadir\Desktop\portfolio\Nadirs_Resume.pdf" download class="bg-yellow-400 text-black px-4 py-2 rounded-md">
+        <a href="Nadirs_Resume.pdf" download class="bg-yellow-400 text-black px-4 py-2 rounded-md">
             Download Resume
         </a>
     </div>
