--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
             <h3 class="text-xl font-bold">Introduction to Cybersecurity</h3>
             <p class="mt-2">Cisco</p>
             <p class="mt-2 text-sm">2024</p>
-            <a href="Cisco_IntroTo_CyberSec" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
+            <a href="Cisco_IntroTo_CyberSec.pdf" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">CEHv12</h3>
             <p class="mt-2">Simplilearn</p>
             <p class="mt-2 text-sm">2024</p>
-            <a href="SimpliLearn CEHv12" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
+            <a href="SimpliLearn CEHv12.pdf" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">CNSP</h3>
             <p class="mt-2">The SecOps Group</p>
             <p class="mt-2 text-sm">2024</p>
-            <a href="CNSP" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
+            <a href="CNSP.pdf" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
         </div>
         <div class="bg-gray-700 p-4 rounded-md text-center">
             <h3 class="text-xl font-bold">Introduction to Cyber Security</h3>
             <p class="mt-2">TryhHackMe</p>
             <p class="mt-2 text-sm">2024</p>
-            <a href="THM Intro to CyberSec" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
+            <a href="THM Intro to CyberSec.pdf" target="_blank" class="mt-4 block text-yellow-400">View Certificate</a>
     </div>
 </section>
             
