--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <li><a href="#resume" class="text-white">Download Resume</a></li>
         </ul>
     </div>
+        <!-- Mobile Menu -->
+        <div id="nav-mobile" class="lg:hidden p-4 hidden">
+            <ul class="space-y-4">
+                <li><a href="#about" class="block bg-gray-900 p-2 rounded hover:text-yellow-400">About</a></li>
+                <li><a href="#skills" class="block bg-gray-900 p-2 rounded hover:text-yellow-400">Skills</a></li>
+                <li><a href="#certificates" class="block bg-gray-900 p-2 rounded hover:text-yellow-400">Certificates</a></li>
+                <li><a href="#contact-info" class="block bg-gray-900 p-2 rounded hover:text-yellow-400">Contact Information</a></li>
+                <li><a href="#resume" class="block bg-gray-900 p-2 rounded hover:text-yellow-400">Download Resume</a></li>
+            </ul>
+        </div>
 </nav>
 
     <!-- Hero Section -->
